@@ -17,6 +17,7 @@ import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMock
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.context.annotation.FilterType;
+import org.springframework.context.annotation.Import;
 import org.springframework.http.MediaType;
 import org.springframework.boot.autoconfigure.security.oauth2.client.servlet.OAuth2ClientAutoConfiguration;
 import org.springframework.security.oauth2.jwt.JwtDecoder;
@@ -31,26 +32,16 @@ import java.time.LocalDateTime;
 import java.util.Collections;
 import java.util.List;
 
+import static org.hamcrest.Matchers.hasSize;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
-@WebMvcTest(
-        value = InvestmentGoalCont.class,
-        excludeAutoConfiguration = {
-                OAuth2ResourceServerAutoConfiguration.class,
-                OAuth2ClientAutoConfiguration.class
-        },
-        excludeFilters = @Filter(
-                type = FilterType.ASSIGNABLE_TYPE,
-                classes = {
-                        SecurityConfig.class
-                }
-        )
-)
+@WebMvcTest(InvestmentGoalCont.class)
 @AutoConfigureMockMvc(addFilters = false)
+@Import(SecurityConfig.class)
 public class InvestmentGoalContTest {
 
     @Autowired
@@ -59,29 +50,25 @@ public class InvestmentGoalContTest {
     @MockBean
     private InvestmentGoalService investmentGoalService;
 
-    @MockBean(name = "jwtDecoder")
-    private JwtDecoder jwtDecoder;
-
-    @MockBean
-    private JWT_util jwtUtil;
-
     @Autowired
     private ObjectMapper objectMapper;
 
-    private final String validToken = "Bearer dummy-token";
-
-    private InvestmentGoal createGoal(Long id) {
-        User user = new User();
-        user.setUsername("testuser");
-
+    private InvestmentGoal createRequest() {
         InvestmentGoal goal = new InvestmentGoal();
-        goal.setId(id);
-        goal.setUser(user);
         goal.setStartAmount(new BigDecimal("10000.00"));
         goal.setTargetAmount(new BigDecimal("50000.00"));
         goal.setGoalStartDate(LocalDate.now());
         goal.setGoalEndDate(LocalDate.now().plusYears(2));
         goal.setGoalDescription("Buy a house");
+        return goal;
+    }
+
+    private InvestmentGoal createResponse(Long id) {
+        InvestmentGoal goal = createRequest();
+        goal.setId(id);
+        User user = new User();
+        user.setUsername("testuser");
+        goal.setUser(user);
         goal.setCreatedAt(LocalDateTime.now());
         goal.setUpdatedAt(LocalDateTime.now());
         return goal;
@@ -89,15 +76,14 @@ public class InvestmentGoalContTest {
 
     @Test
     void createInvestmentGoal_Success() throws Exception {
-        InvestmentGoal goal = createGoal(1L);
+        InvestmentGoal response = createResponse(1L);
 
-        when(investmentGoalService.createInvestmentGoal(any(InvestmentGoal.class), anyString()))
-                .thenReturn(goal);
+        when(investmentGoalService.createInvestmentGoal(any(InvestmentGoal.class)))
+                .thenReturn(response);
 
         mockMvc.perform(post("/api/investment-goals")
-                        .header("Authorization", validToken)
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(goal)))
+                        .content(objectMapper.writeValueAsString(createRequest())))
                 .andExpect(status().isCreated())
                 .andExpect(jsonPath("$.id").value(1L))
                 .andExpect(jsonPath("$.goalDescription").value("Buy a house"));
@@ -105,18 +91,29 @@ public class InvestmentGoalContTest {
 
     @Test
     void getAllInvestmentGoals_Success() throws Exception {
-        InvestmentGoal goal = createGoal(1L);
-        List<InvestmentGoal> goals = Collections.singletonList(goal);
+        List<InvestmentGoal> goals = List.of(
+                createResponse(1L),
+                createResponse(2L)
+        );
 
-        when(investmentGoalService.getAllInvestmentGoals(anyString()))
+        when(investmentGoalService.getAllInvestmentGoals())
                 .thenReturn(goals);
 
-        mockMvc.perform(get("/api/investment-goals")
-                        .header("Authorization", validToken))
+        mockMvc.perform(get("/api/investment-goals"))
                 .andExpect(status().isOk())
+                .andExpect(jsonPath("$", hasSize(2)))
                 .andExpect(jsonPath("$[0].id").value(1L))
-                .andExpect(jsonPath("$[0].goalDescription").value("Buy a house"));
+                .andExpect(jsonPath("$[1].id").value(2L));
     }
+
+//    @Test
+//    void createInvestmentGoal_ValidationFailure() throws Exception {
+//        mockMvc.perform(post("/api/investment-goals")
+//                        .contentType(MediaType.APPLICATION_JSON)
+//                        .content("{}"))
+//                .andExpect(status().isBadRequest());
+//    }
+}
 
 //    @Test
 //    void createInvestmentGoal_InvalidPayload() throws Exception {
@@ -128,4 +125,4 @@ public class InvestmentGoalContTest {
 //                        .content(objectMapper.writeValueAsString(invalidGoal)))
 //                .andExpect(status().isBadRequest()); // or whatever validation fails to
 //    }
-}
+
